# mkdocs-manpage

./: .copier-answers.yml  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  duties.py  index.html  manpage.1  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml  dists.yml  release.yml
changelog/: index.html
code_of_conduct/: index.html
config/: ruff.toml
contributing/: index.html
coverage/: covindex.html  d_22d6b335404c3008_config_py.html  d_22d6b335404c3008_logger_py.html  d_22d6b335404c3008_plugin_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_plugin_py.html  index.html  status.json
credits/: index.html
docs/.overrides/partials/: comments.html
docs/insiders/: changelog.md  goals.yml  index.md  installation.md
insiders/: goals.yml  index.html
insiders/changelog/: index.html
insiders/installation/: index.html
license/: index.html
reference/: SUMMARY.txt
reference/SUMMARY/: index.html
reference/mkdocs_manpage/: index.html
reference/mkdocs_manpage/config/: index.html
reference/mkdocs_manpage/debug/: index.html
reference/mkdocs_manpage/logger/: index.html
reference/mkdocs_manpage/plugin/: index.html
reference/mkdocs_manpage/preprocess/: index.html
scripts/: gen_credits.py  insiders.py  make  preprocess.py
search/: search_index.json
src/mkdocs_manpage/: __init__.py  config.py  debug.py  logger.py  plugin.py  preprocess.py
tests/: __init__.py  test_plugin.py
