[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mkdocs-manpage"
description = "MkDocs plugin to generate a manpage from the documentation site."
authors = [{name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
preprocess = [
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]

[project.urls]
Homepage = "https://pawamoy.github.io/mkdocs-manpage"
Documentation = "https://pawamoy.github.io/mkdocs-manpage"
Changelog = "https://pawamoy.github.io/mkdocs-manpage/changelog"
Repository = "https://github.com/pawamoy/mkdocs-manpage"
Issues = "https://github.com/pawamoy/mkdocs-manpage/issues"
Discussions = "https://github.com/pawamoy/mkdocs-manpage/discussions"
Gitter = "https://gitter.im/mkdocs-manpage/community"
Funding = "https://github.com/sponsors/pawamoy"

[project.entry-points."mkdocs.plugins"]
manpage = "mkdocs_manpage.plugin:MkdocsManpagePlugin"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
